notebook specs and background info

--- a/src/notebook.ipynb
+++ b/src/notebook.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Pneumonia Detection Using Keras\n",
-    "This project aimed to create a three-way multiclassification model to identify pneumonia from X-Ray image of children. The possible classifications are normal, bacterial pneumonia, and viral pneumonia. The purpose of this project is to create a quick and simplified way for anyone to classify pneumonia in children, possibly saving lives due to an early warning about the terrible disease. \n",
+    "This project aimed to create a three-way multiclassification model using a Convolutional Neural Network made with Google'stheneumonia. The purpose of this project is to create a quick and simplified way for anyone to classify pneumonia in children, possibly saving lives due to an early warning about the terrible disease.\n",
     "\n",
     "### Trainer Specs\n",
     "- Hardware\n",
@@ -17,7 +17,12 @@
     "- Software\n",
     "    - Python 3.10.12\n",
     "    - Tensorflow 2.16.1\n",
-    "    - Keras 3.1.1"
+    "    - Keras 3.1.1\n",
+    "\n",
+    "### Background Information\n",
+    "This model is trained on [this dataset from Kaggle][kaggle_link]. However, Kaggle groups the bacterial and viral pneumonia together, creating a binary image classification problem. I wanted to take it a step further, separating the types of pneumonia out for further classification. To accomplish this, I renamed the `PNEUMONIA` directories to `BACTERIA` and moved all the viral pneumonia X-Rays into new `VIRUS` directories, to allow for easier data retrieval and labeling. To run locally, ensure to follow the same steps.\n",
+    "\n",
+    "[kaggle_link]: https://www.kaggle.com/datasets/paultimothymooney/chest-xray-pneumonia \"Chest X-Ray Images (Pneumonia)\""
    ]
   }
  ],
