added one-hot encoding info

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -66,7 +66,7 @@
    "metadata": {},
    "source": [
     "#### Custom Dataset Class\n",
-    "This custom class implements a Keras PyDataset, allowing for the model to read the data using a Python generator. This prevents massive memory usage and allows for higher definition images to be used."
+    "This custom class implements a Keras PyDataset, allowing for the model to read the data using a Python generator. This prevents massive memory usage and allows for higher definition images to be used. To represent the classes, I opted for one-hot encoding, meaning each image has an array attached to it representing the class, such as [1, 0, 0]."
    ]
   },
   {
